--- a/styles/style.css
+++ b/styles/style.css
@@ -21,13 +21,18 @@
     padding-top: 50px;
 }
 
-nav{
+.nav{
     width: 35%;
 }
+nav{
+    width: 100%;
+    height: 100%;
+}
 
-nav ul{
+.nav-ul{
     display: flex;
     justify-content: space-between;
+
 }
 
 nav li{
@@ -73,7 +78,6 @@ nav li a{
     margin-bottom: 35px;
 }
 .header-image{
-    border: 2px solid red;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,4 +88,23 @@ nav li a{
 .hd-image{ 
     width: 100%;
     height: auto;
+}
+@media screen and (max-width : 576px) {
+    .nav-ul{
+        display: inline;
+        text-align: center;
+    }
+    nav li{
+        margin-bottom: 15px;
+    }
+    .nav-txt{
+        background-color: rgb(88, 134, 88);
+        padding: 5px;
+        border-radius: 5px;
+        color: white;
+    }
+    .nav-txt:hover{
+        background-color: antiquewhite;
+        color: #424242;
+    }
 }
