--- a/styles/style.css
+++ b/styles/style.css
@@ -176,7 +176,6 @@ nav li a{
 .mid-body-div{
     display:flex; 
     margin: 0  15%;
-    display: none;
 }
 .text-block-spr h3{
     padding-bottom: 5%;
@@ -204,7 +203,7 @@ nav li a{
     background: #FF900E;
     border: none;
     border-radius: 8px;
-    padding: 5%;
+    padding: 3%;
 }
 .big-btn-big-text{
     font-weight: 700;
@@ -218,3 +217,30 @@ nav li a{
     font-size: 25px;
     color: #FFFFFF;
 }
+
+@media screen and (max-width : 576px){
+    .mid-body-div{
+        display: block;
+    }
+    .text-block-spr{
+        text-align: center;
+    }
+    .mid-body-image{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .mid-img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        overflow: hidden;
+    }
+    .big-btn-big-text{
+        font-weight: 700;
+        font-size: 35px;
+    }
+    .big-btn{
+        align-items: center;
+    }
