--- a/styles/style.css
+++ b/styles/style.css
@@ -244,3 +244,62 @@ nav li a{
     .big-btn{
         align-items: center;
     }
+
+}
+/* bottom body  */
+
+.bottom-body{
+    margin-top: 5%;
+}
+.bottom-texts{
+    padding-left: 10%;
+    padding-bottom: 10%;
+}
+
+.box{
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1%;
+}
+.box img{
+    height: 30%;
+    width: 30%;
+    padding-bottom: 10%;
+}
+.box h3{
+    font-weight: 600;
+    font-size: 45px;
+    color: #424242;
+}
+.box h4{
+    font-weight: 600;
+    font-size: 20px;
+    color: #727272;
+}
+.boxes{
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 15%;
+}
+.box:hover{
+    background: #FF900E;
+    color: #FFFFFF;
+    padding: 2%;
+    transition-duration: .5s;
+}
+
+@media screen and (max-width : 576px) {
+    .boxes{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .box{
+        width: 50%;
+        margin-bottom: 5%;
+    }  
+}
