--- a/styles/style.css
+++ b/styles/style.css
@@ -197,7 +197,7 @@ nav li a{
     padding-right: 5%;
 }
 .mid-img{
-    padding-left: 5%;
+    
 }
 .big-btn{
     background: #FF900E;
@@ -220,7 +220,9 @@ nav li a{
 
 @media screen and (max-width : 576px){
     .mid-body-div{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .text-block-spr{
         text-align: center;
@@ -228,8 +230,8 @@ nav li a{
     .mid-body-image{
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
+        width: 100%;
     }
     .mid-img{
         width: 100%;
@@ -263,6 +265,7 @@ nav li a{
     flex-direction: column;
     align-items: center;
     padding: 1%;
+    transition: transform 1s;
 }
 .box img{
     height: 30%;
@@ -288,7 +291,8 @@ nav li a{
     background: #FF900E;
     color: #FFFFFF;
     padding: 2%;
-    transition-duration: .5s;
+    transition-duration: 1s;
+    transform: rotate(360deg);
 }
 
 @media screen and (max-width : 576px) {
@@ -316,6 +320,8 @@ nav li a{
     display: flex;
     justify-content: space-evenly;
     padding-top: 5%;
+    -webkit-filter: grayscale(100%); 
+    filter: grayscale(100%);
 }
 
 @media screen and (max-width : 576px){
