--- a/styles/style.css
+++ b/styles/style.css
@@ -166,9 +166,13 @@ nav li a{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        padding: 0;
     }
     .top-body-texts h1,h3{
         text-align: center;
+    }
+    .top-body-image{
+        padding: 0;
     }
 }
 
